--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_auth: ^6.1.2
   firebase_core: ^4.2.1
+  bloc: ^9.1.0
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/consts/images/
+    - lib/assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -79,9 +81,9 @@ flutter:
     - family: Poppins
       fonts:
         # - asset: lib/consts/fonts/Poppinsfont/
-        - asset: lib/consts/fonts/Poppinsfont/Poppins-Regular.otf
+        - asset: lib/assets/fonts/Poppinsfont/Poppins-Regular.otf
           weight: 400
-        - asset: lib/consts/fonts/Poppinsfont/Poppins-Bold.otf
+        - asset: lib/assets/fonts/Poppinsfont/Poppins-Bold.otf
           weight: 700
   #         style: italic
   #   - family: Trajan Pro
